imagenes añadidas y mejorado naming

--- a/index.html
+++ b/index.html
@@ -1,12 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap&subset=latin-ext"
+    rel="stylesheet>
+    <link rel="stylesheet" href="CSS/normalize.css" />
+    <link rel="stylesheet" href="CSS/style.css" />
+    <title>Réplica web</title>
+  </head>
+
+  <body>
+    <header>
+      <div class="logo">
+        <img id="logo" src="./images/logo.svg" alt="logo" />
+      </div>
+      <nav class="menu">
+        <ul class="flex">
+          <li><a href="#">DESCRIPTION</a></li>
+          <li><a href="#">FEATURES</a></li>
+          <li><a href="#">SCREENS</a></li>
+          <li><a href="#">EXTRA</a></li>
+          <li><button class="download">DOWNLOAD</button></li>
+        </ul>
+      </nav>
+    </header>
+    <br />
+    <br />
+    <br />
+    <br />
+    <main>
+      <section>
+        <div>
+          <img class="yellowCircle" src="images/decorative-yellow-circle.svg" alt="yellow circle" />
+        </div>
+        <div class="greenDiamond">
+          <img src="images/decorative-green-diamond.svg" alt="green diamond" />
+        </div>
+        <div>
+          <h1>Mobile App Landing Page</h1>
+          <p>
+            Start focusing on your goals and get more things done with Sync
+            mobile application. It's the first app to harness the power of
+            social connections to help you stay focused and get organized.
+          </p>
+        </div>
+        <br />
+        <div class="redButton">
+          <button class="download red1">
+            <img class="apple" src="/images/apple icon.png" />DOWNLOAD
+          </button>
+          <button class="download red2">
+            <img class="play" src="/images/play icon.png" />DOWNLOAD
+          </button>
+        </div>
+        <div class="white circle">
+          <img src="images/decorative-white-circle.svg" alt="white circle" />
+        </div>
+        <div class="blueCircle">
+          <img src="images/decorative-blue-circle.svg" alt="blue circle" />
+        </div>
+        <div class="mobile">
+          <img src="images/header-iphone.png" alt="mobile" />
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
