--- a/index.html
+++ b/index.html
@@ -1,71 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap&subset=latin-ext"
-    rel="stylesheet>
-    <link rel="stylesheet" href="CSS/normalize.css" />
-    <link rel="stylesheet" href="CSS/style.css" />
-    <title>Réplica web</title>
-  </head>
 
-  <body>
-    <header>
-      <div class="logo">
-        <img id="logo" src="./images/logo.svg" alt="logo" />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="CSS/normalize.css" />
+  <link rel="stylesheet" href="CSS/style.css" />
+  <title>Réplica web</title>
+</head>
+
+<body>
+  <header>
+    <nav class="menu">
+      <img class="logo" src="./images/logo.svg" alt="logo" />
+      <ul class="flex">
+        <li><a href="#">DESCRIPTION</a></li>
+        <li><a href="#">FEATURES</a></li>
+        <li><a href="#">SCREENS</a></li>
+        <li><a href="#">EXTRA</a></li>
+        <li><a href="https://factoriaf5.org/"><button class="download">DOWNLOAD</button></a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section home>
+      <div>
+        <img class="greenDiamond" src="./images/decorative-green-diamond.svg" alt="green diamond" />
+        <img class="yellowCircle" src="./images/decorative-yellow-circle.svg" alt="yellow circle" />
       </div>
-      <nav class="menu">
-        <ul class="flex">
-          <li><a href="#">DESCRIPTION</a></li>
-          <li><a href="#">FEATURES</a></li>
-          <li><a href="#">SCREENS</a></li>
-          <li><a href="#">EXTRA</a></li>
-          <li><button class="download">DOWNLOAD</button></li>
-        </ul>
-      </nav>
-    </header>
-    <br />
-    <br />
-    <br />
-    <br />
-    <main>
-      <section>
+      <div>
+        <h1>Mobile App Landing Page</h1>
+        <p>
+          Start focusing on your goals and get more things done with Sync
+          mobile application. It's the first app to harness the power of
+          social connections to help you stay focused and get organized.
+          <br>
+        </p>
+      </div>
+
+      <div class="redButton">
+        <button class="downloadRed1">
+          <img class="apple" src="./images/apple icon.png" />DOWNLOAD</button>
+        <button class="downloadRed2">
+          <img class="play" src="./images/play icon.png" />DOWNLOAD</button>
+      </div>
+
+      <div class="circles">
+        <img class="blueCircle" src="./images/decorative-blue-circle.svg" alt="blue circle" />
+        <img class="whiteCircle" src="./images/decorative-white-circle.svg" alt="white circle" />
+      </div>
+
+      <div class="mobile">
+        <img class="mobile1" src="./images/header-iphone.png" alt="mobile" />
+      </div>
+    </section>
+
+    <section id="SectionButtons">
+      <div class="circleButtons">
         <div>
-          <img class="yellowCircle" src="images/decorative-yellow-circle.svg" alt="yellow circle" />
-        </div>
-        <div class="greenDiamond">
-          <img src="images/decorative-green-diamond.svg" alt="green diamond" />
+          <img src="./images/violet icon.png" />
+          <div class="violetButton">Identify Goals</div>
         </div>
         <div>
-          <h1>Mobile App Landing Page</h1>
-          <p>
-            Start focusing on your goals and get more things done with Sync
-            mobile application. It's the first app to harness the power of
-            social connections to help you stay focused and get organized.
+          <img src="./images/green icon.png" />
+          <div class="greenButton">Situation Analysis</div>
+        </div>
+        <div>
+          <img src="./images/pink icon.png" />
+          <div class="pinkButton">Tasks Settings</div>
+        </div>
+        <div>
+          <img src="./images/yellow icon.png" />
+          <div class="yellowButton">Social Interaction</div>
+        </div>
+        <div>
+          <img src="./images/blue icon.png" />
+          <div class="blueButton">Get Things Done</div>
+        </div>
+      </div>
+    </section>
+
+    <section id="SectionDescription1">
+      <div class="container">
+        <img class="image1SectionDescription" src="./images/description-1-app.png" alt="Image Description Section" />
+        <div class="text1SectionDescription">
+          <h2>Organize your Time And Start Getting Results</h2>
+          <br>
+          <p>Sync is the first mobile app on the market to harness the power of social connections to help you stop
+            procrastinating
+            and start getting things done. Give it a try and see the changes right away.
+            <br><br>
+          <ul>
+            <li>Analyse and evaluate your current status and productivity</li>
+            <li>Begin monitoring your day to day routine with Sync app</li>
+            <li>See the improved results in no more than a couple of weeks</li>
+          </ul>
           </p>
         </div>
-        <br />
-        <div class="redButton">
-          <button class="download red1">
-            <img class="apple" src="/images/apple icon.png" />DOWNLOAD
-          </button>
-          <button class="download red2">
-            <img class="play" src="/images/play icon.png" />DOWNLOAD
-          </button>
-        </div>
-        <div class="white circle">
-          <img src="images/decorative-white-circle.svg" alt="white circle" />
-        </div>
-        <div class="blueCircle">
-          <img src="images/decorative-blue-circle.svg" alt="blue circle" />
-        </div>
-        <div class="mobile">
-          <img src="images/header-iphone.png" alt="mobile" />
-        </div>
-      </section>
-    </main>
-  </body>
+        <div class="lightboxButton"><button class="lightbox">LIGHTBOX</button></div>
+      </div>
+    </section>
+  </main>
+</body>
+
 </html>
