--- a/index.html
+++ b/index.html
@@ -88,16 +88,23 @@
         <div class="text1SectionDescription">
           <h2>Organize your Time And Start Getting Results</h2>
           <br>
-          <p>Sync is the first mobile app on the market to harness the power of social connections to help you stop
-            procrastinating
-            and start getting things done. Give it a try and see the changes right away.
-            <br><br>
+          <p>
+            Sync is the first mobile app on the market to harness the
+            power of social connections to help you stop procrastinating
+            and start getting things done. Give it a try and see the 
+            changes right away.
+            <br>
+            <br>
+          </p>
           <ul>
             <li>Analyse and evaluate your current status and productivity</li>
+            <br>
             <li>Begin monitoring your day to day routine with Sync app</li>
+            <br>
             <li>See the improved results in no more than a couple of weeks</li>
+            <br>
           </ul>
-          </p>
+          
         </div>
         <div class="lightboxButton"><button class="lightbox">LIGHTBOX</button></div>
       </div>
